js262/test/language/statements/variable/arguments-strict-single.js


/*---
es5id: 12.2.1-12-s
esid: sec-variable-statement
description: arguments as local var identifier throws SyntaxError in strict mode
flags: [onlyStrict]
negative:
  phase: parse
  type: SyntaxError
---*/

$DONOTEVALUATE();

var arguments;
